Updates to the code readability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 # Files
+staff_boxes_img.png
+staff_recs_img.png
+half_recs_img.png
+whole_recs_img.png
+quarter_recs_img.png
+res.png
 test.py
 *.mid
 old/
